testsuite/tests/properties/invalid_lazy_field/call/test.lkt
from common import Number

class FooNode implements Node[FooNode] {
}

class Example: FooNode {
    @lazy lf: Bool = true

    @exported
    fun p(): Bool = node.lf()
}
